# agentstate

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
0.1/: 404.html  index.html  objects.inv
0.1/build_instructions/: index.html
0.1/changelog/: index.html
0.1/final-build/: index.html
0.1/quickstart/: index.html
0.1/search/: search_index.json
0.1/v4_build/: index.html
0.2/: 404.html  index.html  objects.inv
0.2/benchmark/: index.html
0.2/build_instructions/: index.html
0.2/changelog/: index.html
0.2/final-build/: index.html
0.2/quickstart/: index.html
0.2/search/: search_index.json
0.2/v4_build/: index.html
0.5.1/: 404.html  index.html  objects.inv
0.5.1/final-build/: index.html
0.5.1/search/: search_index.json
0.5.1/v4_build/: index.html
0.5/benchmark/: index.html
0.5/build_instructions/: index.html
0.5/changelog/: index.html
0.5/final-build2/: index.html
0.5/quickstart/: index.html
agentstate/: __init__.py
agentstate/core/: __init__.py  events.py  state.py
agentstate/memory/: __init__.py  store.py
agentstate_lib/: __init__.py
agentstate_lib/core/: patch.py  state.py
agentstate_lib/memory/: __init__.py  store.py
agentstate_lib/router/: __init__.py  context.py  graph.py  types.py
agentstatelib/: __init__.py
agentstatelib/api/: __init__.py  app.py  auth.py  cache.py  dashboard.py  routes.py  streaming.py
agentstatelib/contrib/: base_agent.py  tracing.py
docs/: benchmark.md  build_instructions.md  index.md  quickstart.md
output/: benchmark_results.json
tests/: conftest.py
(+119 files in other folders)
