[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentstate-lib"
version = "0.2.0"
description = "Stateful coordination layer for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tanveer Kaur", email = "tanveerkaur1292@outlook.com" }]
keywords = ["agents", "multi-agent", "llm", "orchestration", "state"]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
api       = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
otel      = ["opentelemetry-api", "opentelemetry-sdk",
             "opentelemetry-exporter-otlp-proto-grpc"]
dashboard = ["rich>=13.0"]
contrib   = []
dev       = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "hypothesis>=6.0",
    "httpx>=0.24",
]
docs = [
    "mike>=2.2.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agentstatelib"]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "httpx2>=2.3.0",
]
